# splunk-api-poc

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements-dev.txt
.devcontainer/: devcontainer.json  postCreateCommand.sh
mymodule/: get_ip.py
mymodule/lib/: http_bin_client.py
tests/: test_http_bin_client.py
